adding update post
